--- a/html/style/sass/components/_navbar.scss
+++ b/html/style/sass/components/_navbar.scss
@@ -6,7 +6,6 @@ nav {
     display:flex;
     align-items: center;
     justify-content: space-between;
-
     padding: 20px 5%;
     z-index: 1;
     
@@ -48,15 +47,106 @@ nav {
         font-size: 20px;
     }
 
-    &:not(.active){
-        .top{
+    .top{display: none;}
+    .list-items{display: none;}
+    i[class="bi bi-plus-lg"]{display: none;}
+    #dropdownNav{display: none;}
+
+    @media screen and (min-width: 570px){
+        .top {
+            display: flex;
+        }
+    }
+
+    @media screen and (min-width: 1180px) {
+        .mediaquery{
             display: none;
         }
-        i[class="bi bi-plus-lg"]{
+
+        .list-items {
+            display: flex;
+            color: $color-contrastWhite;
+            align-items: center;
+            gap: 30px;
+            h2{
+                font-size: 18px;
+                font-weight: 500px;
+
+                &#login{
+                    @include buttonLight(150px);
+                }
+                &#register{
+                    @include buttonSecondary(150px);
+                }
+            }
+        }
+        i[class="bi bi-list"]{
             display: none;
         }
-        .list-items{
-            display: none;
+        #dropdownNav{
+            position: relative;
+            display: block;
+
+            img{
+                border-radius: 100%;
+                height: 50px;
+                aspect-ratio: 1/1;
+                object-fit: cover;
+            }
+
+            .dropdown-content{
+                position: absolute;
+                top: 80px;
+                left: -65px;
+                background-color: $color-contrastWhite;
+                min-width: 160px;
+                border-radius: 4px;
+                
+                .items{
+                    z-index: 2;
+                    overflow: hidden;
+                    height: 0px;
+                    transition: height .3s ease-in-out .2s;
+
+                    a{
+                        color: $color-contrastBlack;
+                        text-align: center;
+                        padding: 12px 16px;
+                        text-decoration: none;
+                        display: block;
+                        transition: background-color .1s ease-in-out;
+                    }
+
+                    a:hover {background-color: $color-accentuation;}
+                }
+
+
+                &::before{
+                    content: "";
+                    position: absolute;
+                    top: -10px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    display: block;
+                    width: 15px;
+                    height: 0px;
+                    background-color: $color-contrastWhite;
+                    clip-path: polygon(50% 0, 100% 100%, 0 100%);
+                    z-index: -1;
+                    transition: height .1s ease-in-out .4s;
+                }
+                
+            }
+            &:hover .dropdown-content, .items:hover{
+                &::before{
+                    height: 15px;
+                    transition: height 0s ease-in-out 0s;
+                }
+                .items, .items:hover{
+                    height: 3 * 40px;
+                    transition: height .3s ease-in-out 0s;
+                }
+            }
         }
     }
     
@@ -76,6 +166,7 @@ nav {
             display: none;
         }
         i[class="bi bi-plus-lg"]{
+            display: block;
             color: $color-contrastWhite;
             position: absolute;
             top: 20px;
@@ -94,30 +185,21 @@ nav {
             justify-content: space-between;
             width: 100%;
             form{
-                display: flex;
                 flex-direction: column;
                 gap: 15px;
+                width: 100%;
+                max-width: calc(100% - 50px);
                 select{
-                    background-color: $color-accentuation;
-                    max-width: 230px;
-                    font-size: 14px;
+                    width: 100%;
                     text-align: center;
+                    border-radius: 4px;
                 }
                 .search{
-                    max-width: 230px;
-                    border: none;
-                    border-radius: 5px;
                     color: $color-contrastWhite;
-                    display: flex;
-
-                    button{
-                        background-color: $color-accentuation;
-                        border-radius: 0px 4px 4px 0px;
-                        width: 40px;
-                    }
                     input{
-                        background-color: $color-contrastWhite;
                         border-radius: 4px 0px 0px 4px;
+                        max-width: calc(100% - 40px);
+                        width: 100%;
                     }
                 }
             }
